--- a/FirstXamarin/FirstXamarin/MainPage.xaml
+++ b/FirstXamarin/FirstXamarin/MainPage.xaml
@@ -8,9 +8,20 @@
 
     <StackLayout>
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
+        <Label Text="Notes" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
+        <Editor x:Name="editor" Placeholder="Please Input Your Note" HeightRequest="100" Text="{Binding Text}"
+            ></Editor>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Button Text="Save" Clicked="Button_SaveNote" />
+            <Button Grid.Column="1" Text="Delete" Clicked="Button_DeleteNote"/>
+        </Grid>
+        <Button Text="Click Me" Clicked="Button_Clicked" ></Button>
     </StackLayout>
 
 </ContentPage>
